<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (c) Oliver Bye 2010 Licensed under the Apache License,
		Version 2.0 (the "License"); you may not use this file except in
		compliance with the License. You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0 Unless required by
		applicable law or agreed to in writing, software distributed under the
		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<CheckBoxPreference android:key="enableTones"
		android:title="@string/enable_tones_title" android:summaryOn="@string/enable_tones_summaryOn"
		android:summaryOff="@string/enable_tones_summaryOff" />

	<EditTextPreference android:key="country_code_edittext"
		android:defaultValue="@string/default_value_country_code_preference"
		android:title="@string/title_country_code_preference" android:summary="@string/summary_country_code_preference"
		android:dialogTitle="@string/dialog_title_country_code_preference"
		android:dialogMessage="@string/dialog_message_country_code_preference"
		android:inputType="phone"/>

	<EditTextPreference android:key="trunk_code_edittext"
		android:defaultValue="@string/default_value_trunk_code_preference"
		android:title="@string/title_trunk_code_preference"
		android:summary="@string/summary_trunk_code_preference"
		android:dialogTitle="@string/dialog_title_trunk_code_preference"
		android:dialogMessage="@string/dialog_message_trunk_code_preference"
		android:inputType="phone"/>

	<PreferenceScreen android:title="Web"
		android:summary="Visit the website to raise issues.">
		<intent android:action="android.intent.action.VIEW"
			android:data="http://wiki.github.com/olibye/ToneDial/" />
	</PreferenceScreen>

</PreferenceScreen>
